test/testdata/functions/anonymous/duplicate_params_error.lox
// error: duplicate parameter x
// error: duplicate parameter y
fun(x, y, z, x, y) {};
